# alphoryn

./: .gitignore  CLAUDE.md  CONTEXT.md  MEMO.md  README.md  SETUP.md  TELEMETRY_ACCESS.md  alphoryn_V_0_0.1.md  config.json  config.json.example  config.py  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agent/: __init__.py  analysis_agent.py  callbacks.py  coordinator.py  debate_agents.py  execution_agent.py  preflight.py  prompts.py  research_agent.py  risk_agents.py
alphoryn/agents/: feedback_agent.py  main_agent.py  prompts.py
alphoryn/cli/: main.py
alphoryn/config/: loader.py  models.py
alphoryn/execution/: agent.py
alphoryn/market_data/: client.py
alphoryn/memory/: bank.py  schema.py
alphoryn/monitor/: monitor.py
alphoryn/reports/: generator.py
alphoryn/scheduler/: scheduler.py
alphoryn/secrets/: client.py
alphoryn/skills/: identify_regime.md  mean_reversion_entry.md  momentum_entry.md  read_memory.md  size_position.md
alphoryn/skills/identify-regime/: SKILL.md
alphoryn/skills/mean-reversion-entry/: SKILL.md
alphoryn/skills/momentum-entry/: SKILL.md
alphoryn/skills/read-memory/: SKILL.md
alphoryn/skills/size-position/: SKILL.md
alphoryn/strategies/: mean_reversion.md  momentum.md
alphoryn/telemetry/: logger.py  otel.py
cli/: main.py
db/: __init__.py  schema.py
docs/adr/: 0001-deterministic-risk-synthesis.md  0002-single-service-account.md
evals/: harness.py  record_scenario.py
infra/: __init__.py  log_setup.py  observability.py  rate_limiter.py  retry.py  secrets.py  tool_logger.py
models/: __init__.py  analysis.py  enums.py  execution.py  market.py  memory.py  research.py  risk.py  session.py
specs/001-etf-paper-trading-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-etf-paper-trading-agent/checklists/: requirements.md
specs/001-etf-paper-trading-agent/contracts/: agents.md  cli.md  config-schema.md  report-context.md
strategies/: defensive.yaml  mean_reversion.yaml  momentum.yaml  sector_rotation.yaml
templates/: report_template.html
templates/reports/: mean_reversion.html.j2  momentum.html.j2  session.html.j2
tests/: conftest.py
tests/contract/: test_cli.py  test_config_schema.py
tests/eval/: eval_config.yaml
tests/eval/datasets/: 01_committed_cycle.json  02_aborted_cycles.json  (+1 more)
tests/integration/: test_feedback.py  test_loss_limit.py  test_position_lifecycle.py  test_regime_detection.py  test_session_cycle.py  test_startup.py
tests/unit/: test_agent_callbacks.py  test_agent_factories.py  test_agent_prompts.py  test_analysis_tools.py  test_cli.py  test_cli_main.py  test_config.py  test_coordinator_market_status.py  test_coordinator_regime.py  test_db_schema.py  test_debate_agents.py  test_eval_harness.py  test_evals_harness.py  test_evals_record_scenario.py  test_execution.py  test_execution_agent.py  test_feedback_agent.py  test_file_tools.py  test_infra_observability.py  test_infra_retry.py  test_infra_secrets.py  test_main_agent.py  test_market_data.py  test_memory.py  test_models_properties.py  test_models_risk.py  test_models_session.py  test_monitor.py  test_otel.py  test_preflight.py  test_prompts.py  test_rate_limiter.py  test_registry.py  test_reports.py  test_research_agent.py  test_risk_json_validator.py  test_risk_synthesis.py  test_scheduler.py  test_secrets.py  test_telemetry.py  (+13 more)
tools/: __init__.py  data.py  file_tools.py  fundamentals.py  news.py  registry.py  schemas.py
tools/analysis/: tools.py
tools/coordinator/: tools.py
tools/execution/: tools.py
tools/forex/: tools.py
tools/market/: tools.py
tools/memory/: tools.py
tools/research/: tools.py
tools/strategy/: tools.py
webhook/: Dockerfile  main.py
workflows/: __init__.py  base.py  mean_reversion.py  momentum.py  sector_rotation.py
