[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphoryn"
version = "0.1.0"
description = "Autonomous ETF trading agent — AlgoTrade"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "google-adk>=1.0",
    "alpaca-py>=0.28",
    "yfinance>=0.2",
    "google-cloud-logging>=3.10",
    "google-cloud-trace>=1.13",
    "google-cloud-secret-manager>=2.20",
    "google-generativeai>=0.8",
    "rich>=13.7", # CLI output
    "typer>=0.12", # CLI entrypoint
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-gcp-trace>=1.6", # Cloud Trace exporter
    "pandas>=2.2",
    "numpy>=1.26",
    "oandapyv20>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[project.scripts]
algotrade = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "models", "infra", "cli", "db", "evals", "config.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
